# brainscope

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  Dockerfile.cuda  README.md  pyproject.toml
.github/workflows/: ci.yml
brainscope/: export_hotwire.py  extract.py  hidden_directions.py  jlens.py  parity.py  pca_directions.py  server.py  traces.py
brainscope/static/: index.html
docs/: auditing.md  crosslang.md  demo.webm  jlens.md  steering.md  traces.md
examples/: audit_jlens_hits.py  crosslang_commit.py  crosslang_commit_ladder.jsonl  czech_pairs.jsonl  emoji_pairs.jsonl  excited_pairs.jsonl  fit_jlens.sh  no_smalltalk_prompt_pairs.jsonl
static/: index.html
tests/: conftest.py  test_jlens.py  test_parity_live.py  test_server.py  test_steering_dialect.py  test_traces.py  test_ui.py
