[project]
name = "brainscope"
version = "0.1.0"
description = "Watch your model think while your app talks to it"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = ["fastapi", "uvicorn", "transformers", "torch", "accelerate", "bitsandbytes"]

[project.urls]
Homepage = "https://github.com/moudrkat/brainscope"

[project.scripts]
brainscope = "brainscope.server:main"

[tool.setuptools]
packages = ["brainscope"]

[tool.setuptools.package-data]
brainscope = ["static/*"]
