[project]
name = "brainscope"
version = "0.1.0"
description = "Watch your model think while your app talks to it"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = ["fastapi", "uvicorn[standard]", "transformers", "torch", "accelerate", "bitsandbytes"]

[project.urls]
Homepage = "https://github.com/moudrkat/brainscope"

[project.optional-dependencies]
test = ["pytest", "httpx", "playwright"]

[project.scripts]
brainscope = "brainscope.server:main"
brainscope-jlens = "brainscope.jlens:main"

[tool.setuptools]
packages = ["brainscope"]

[tool.setuptools.package-data]
brainscope = ["static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["ui: browser tests (need `playwright install chromium`)"]
addopts = "-m 'not ui'"

